# Security-Chat

./: .gitignore  teste.py
secure-chat-server/: CMakeLists.txt  README.md
secure-chat-server/main/: CMakeLists.txt  secure-chat-server.c
secure-chat-server/main/include/: hardware_config.h  msg-repository.h  pool-msg-service.h  register-service.h  send-msg-service.h  socket-server.h  user-repository.h  wifi-connect.h
secure-chat-server/main/src/: hardware_config.c  msg-repository.c  pool-msg-service.c  register-service.c  send-msg-service.c  socket-server.c  user-repository.c  wifi-connect.c
web-app/: electron-main.js  package-lock.json  package.json
web-app/backend/: package-lock.json
web-app/backend/src/: app.controller.ts  app.module.ts  esp32.service.ts  main.ts  types.ts
web-app/backend/src/dtos/: register.dto.ts
web-app/frontend/src/: App.css  App.jsx
